# DataPlusPlus

./: .gitignore  CMakeLists.txt  Makefile  README.md
dataset/: AAPL1.csv
include/: DataFrame.h  MathUtil.h  Primitives.h  Series.h  SeriesOperations.h
src/: DataFrame.cpp  MathUtil.cpp  Primitives.h  Series.cpp  SeriesOperations.cpp  a.out  main.cpp
